--- a/adminClient/Test2.html
+++ b/adminClient/Test2.html
@@ -57,7 +57,7 @@
 				}
 				else
 				{
-					console.log(messageCoder.decode(received_msg));	
+					console.log(messageCoder.decode(serverResponseMessage));	
 				}
 			}
 			function sendSomething()
